Fixed styling on contact page, created second sponsorship page, made spacing for the title of pages consistent.

--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,6 @@ input[type=submit]:hover {
 /* Add a background color and some padding around the form */
 .contact-container {
   border-radius: 5px;
-  background-color: #f2f2f2;
   padding: 20px;
 }
 
